# eva-old

./: .gitignore  ChangeLog  DISCUSSION.md  README.ko.md  README.md  TODO.md  configure  configure.ac  libtool  test.dump
docs/: README.md
docs/additional/: LIST.OF.TCP.AND.UDP.PORT.NUMBERS.md
docs/api/: README.md
docs/avx/: README.md
docs/blog/: 2021-04-04-benchmark.ko.md  2021-04-04-benchmark.md  2021-04-04-redisclientset.csv  2021-04-06-benchmark-strlen.md
docs/google.io.2021/: index.html
docs/googleio2021/: index.html
docs/intrinsics/: README.md  avx.c
docs/protocol/: README.ko.md  README.md
docs/simd/: README.md
docs/uml/: README.ko.md  README.md
src/: Makefile.am  Makefile.in
src/eva/: Makefile.am  Makefile.in  console.c  console.h  echo.c  echo.h  eva.c  eva.h
src/example/: .gitignore  Makefile.am  Makefile.in
src/example/avx/: _mm256_abs_epi16.c  _mm256_abs_epi32.c  _mm256_abs_epi32.md  _mm256_abs_epi8.c  _mm256_add_epi16.c  _mm256_add_epi32.c  _mm256_add_epi64.c  _mm256_add_epi8.c  _mm256_add_pd.md  _mm256_add_ps.c  _mm256_add_ps.md  _mm256_adds_epi16.c  _mm256_adds_epi8.c  _mm256_adds_epi8.md  _mm256_adds_epu16.c  _mm256_adds_epu8.c  _mm256_addsub_pd.c  _mm256_addsub_pd.md  _mm256_addsub_ps.c  _mm256_addsub_ps.md  _mm256_alignr_epi8.c  _mm256_and_pd.c  _mm256_and_ps.c  _mm256_and_si256.c  _mm256_andnot_pd.c  _mm256_andnot_ps.c  _mm256_andnot_ps.md  _mm256_andnot_si256.c  _mm256_andnot_si256.md  _mm256_avg_epu16.c  _mm256_avg_epu16.md  _mm256_avg_epu8.c  _mm256_avg_epu8.md  _mm256_blend_epi16.c  _mm256_blend_epi32.c  _mm256_blend_epi32.md  _mm256_blend_pd.c  _mm256_blend_ps.c  _mm256_blendv_epi8.c  _mm256_blendv_epi8.md  (+506 more)
src/example/benchmark/: Makefile.am  Makefile.in  client.c  format.c  log.c  server.c  string.c
src/example/client/: Makefile.am  Makefile.in  pool.c  redis.c  simple.c  single.c
src/example/command/: string.c
src/example/console/: .gitignore  Makefile.am  Makefile.in  engine.c  io.c
src/example/ds/: dictionary.c  list.c  map.c  queue.c  stack.c
src/example/eva/: simple.c
src/example/event/: .gitignore  Makefile.am  Makefile.in  clientpool.c  console.c  engine.c  server.c
src/example/protocol/: helloworld.c
src/example/redis/: client.c  ping.c  protocol.c  req.c  set.c
src/example/server/: simple.c
src/example/sse42/: _mm_cmpestra.c  _mm_cmpestrc.c  _mm_cmpestri.c  _mm_cmpestrm.c  _mm_cmpestro.c  _mm_cmpestrs.c  _mm_cmpestrz.c  _mm_cmpistra.c  _mm_cmpistrc.c  _mm_cmpistri.c  _mm_cmpistrm.c  _mm_cmpistro.c  _mm_cmpistrs.c  _mm_cmpistrz.c  _mm_lddqu_si128.c
src/example/string/: api.c  format.c  new.c  simple.c  strlen.c  strlen.new.c  uint64.c
src/example/string/avx/: avx.h  memccpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  novemberizing.code-workspace  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c
src/example/string/avx.old/: avx.h  memset.c  strlen.c
src/x/: Makefile.am  Makefile.in  array.c  array.h  client.c  client.h  command.c  command.h  console.c  console.h  descriptor.c  descriptor.h  dictionary.c  dictionary.h  eva.c  eva.h  event.h  exception.c  exception.h  function.h  io.h  list.c  list.h  log.c  log.h  map.c  map.h  object.c  queue.c  queue.h  req.h  request.h  res.h  response.h  serializable.h  server.c  server.h  session.c  session.h  set.c  (+17 more)
src/x/client/: pool.c  pool.h  socket.c  socket.h
src/x/client/pool/: list.c  list.h
src/x/client/socket/: event.h  status.h
src/x/client/socket/event/: avail.c  avail.h  subscription.h  type.h
src/x/client/socket/event/process/: tcp.c  tcp.h
src/x/client/socket/process/: tcp.c
src/x/client/socket/processor/: tcp.h
src/x/command/: string.c  string.h
src/x/console/: descriptor.c  descriptor.h
src/x/console/descriptor/: event.h  in.c  in.h
src/x/console/descriptor/event/: subscription.h
src/x/console/descriptor/event/processor/: in.c  in.h  out.c  out.h
src/x/descriptor/: event.h  handle.h  mask.h  status.c  status.h
src/x/descriptor/event/: avail.c  avail.h  dispatch.c  dispatch.h  generator.c  generator.h  subscription.c  subscription.h  type.c  type.h
src/x/descriptor/event/generator/: epoll.c  epoll.h
src/x/descriptor/event/generator/subscription/: list.c  list.h
src/x/eva/: cli.c  cli.h  config.h
src/x/eva.old/: cli.c  extension.h
src/x/eva.old/extension/: echo.h
src/x/eva/config/: log.h
src/x/eva/extension/: echo.c  echo.h
src/x/eva/server/: echo.c  echo.h
src/x/event/: engine.c  engine.h  generator.h  processor.c  processor.h  queue.c  queue.h  subscription.c  subscription.h  target.h
src/x/event/engine/: event.h
src/x/event/generator/: set.c  set.h
src/x/event/processor/: event.c  event.h  pool.c  pool.h
src/x/event/processor/pool/: event.c  event.h
src/x/event/subscription/: list.h
src/x/extension/: redis.c  redis.h
src/x/extension/echo/: req.c  req.h  res.c  res.h
src/x/extension/redis/: client.c  client.h  command.c  command.h  object.c  object.h  protocol.h  req.c  req.h  res.c  res.h
src/x/extension/redis/object/: array.c  array.h  bulk.c  bulk.h  error.c  error.h  integer.c  integer.h  string.c  string.h
src/x/server/: socket.c  socket.h
src/x/server/extension/: echo.c  echo.h  port.h
src/x/server/socket/: event.h  status.h
src/x/server/socket/event/: avail.c  avail.h  subscription.h
src/x/server/socket/event/process/: tcp.c  tcp.h
src/x/session/: list.h  socket.c  socket.h
src/x/session/socket/: event.h  status.h
src/x/session/socket/event/: avail.c  avail.h  subscription.h
src/x/session/socket/event/process/: tcp.c  tcp.h
src/x/socket/: event.h  handle.c  handle.h  status.h  stream.h
src/x/socket/event/: subscription.h  type.h
src/x/socket/event/handler/: tcp.h
src/x/socket/processor/: tcp.c  tcp.h
src/x/socket/processor/tcp/: client.c  client.h  server.c  server.h  session.h
src/x/stream/: buffer.c  buffer.h
src/x/string/: format.c  format.h
src/x/sync/posix/: mutex.c  mutex.h
src/x/thread/: posix.c  posix.h
(+249 files in other folders)
